Here is a concise summary of the changes formatted as a commit message:
implement dynamic payment status calculation based on student payment history, update lesson views and reports

- refactor PaymentStatusUtil to calculate payment status by chronologically tracking remaining balance across payments and chargeable lessons
- update LessonService to include overall and individual student payment statuses in lesson list and profile views
- integrate payment status tracking into ReportService for generated reports
- add repository methods to fetch all lessons and payments for a specific student
- update lesson profile template to display payment status and add/update unit tests for the new logic